--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,7 +1,13 @@
 <div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper">
-            <span class="brand-logo">Movie App</span>
-        </div>
-    </nav>
-</div>
+        <nav>
+          
+           
+            <div class="nav-wrapper">  <img [src]="logo" [width]="widthLogo" [alt]="altLogo" [title]="titleLogo"><span class="brand-logo">{{title}}</span> </div>
+      
+        </nav>
+
+      
+      <div>
+      
+      </div>
+       </div>     
