--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <media-app-header></media-app-header>
     <div *ngFor="let movie of movies" class="collection">
         <img [src]="movie.poster">
-        <h4>Movie: {{movie.title}}</h4>
+        <h4 [class]="movie.seen? 'lime':'pink'"> <i class="material-icons">home</i> {{movie.title}}</h4>
         <h6>Plot: {{movie.plot}}</h6>
       </div>
     <router-outlet></router-outlet>
