add movie setup

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,13 +1,7 @@
 <div class="navbar-fixed">
         <nav>
-          
-           
-            <div class="nav-wrapper"> <img [src]="logo" [width]="widthLogo" [alt]="altLogo" [title]="titleLogo"><span class="brand-logo">{{title}}</span> </div>
-      
+            <div class="nav-wrapper"> <img [src]="logo" [width]="widthLogo" [alt]="altLogo" [title]="titleLogo"><span class="brand-logo">{{title}} </span>
+              </div>
+              <div><a class="btn" routerLink="movies/add">Add Movie</a></div>
         </nav>
-
       
-      <div>
-      
-      </div>
-       </div>     
