testing commit function

--- a/src/app/movies-add/movies-add.component.html
+++ b/src/app/movies-add/movies-add.component.html
@@ -1,10 +1,13 @@
-<br><br><br><br><br><br><br><br>
+<br><br><br><br>
 <form>
     <label>Title:</label>
-    <input [(ngModel)]="movies.title" name="title">
-
-    <label>Due date:</label>
-    <input type="date" [(ngModel)]="movies.date" name="date">
+    <input [(ngModel)]="movie.title" name="title">
+    <br>
+    <button type="button">Submit</button>
 </form>
 
-<button type="button">Submit</button>
+
+<br>
+<br>
+
+<div class="card-action"> <a class="btn" routerLink="/movies">Go Back</a> </div>
